--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,7 @@ html
     link(rel='stylesheet' href='/css/style.css')
     link(rel='stylesheet' href='/css/index.css')
     link(rel='stylesheet' href='/css/place-select.css')
+    link(rel='stylesheet' href='/css/bus-ticket.css')
   body
     .gtr-header
       .d-flex.justify-content-between
@@ -135,9 +136,10 @@ html
           p Herkes fırsatı sever, biz de biliyoruz. Size özel indirimler ve kampanyalarla seyahatlerinizi daha ekonomik hale getiriyoruz. Avantajlı biletler her zaman elinizin altında.
       if promoRoutes && promoRoutes.length
         .attribute-routes.mt-4
-          .attribute-routes__header
-            h5.text-uppercase.text-secondary.mb-0 Küçük Bir İlham
-          p.attribute-routes__lead.mb-4 Keşfetmeye hazır mısınız? Sizin için seçtiğimiz popüler güzergâhlardan ilham alın.
+          .bus-ticket-results__header
+            .bus-ticket-results__title
+              h2 Küçük Bir İlham
+              p.bus-ticket-results__subtitle Keşfetmeye hazır mısınız? Sizin için seçtiğimiz popüler güzergâhlardan ilham alın.
           ul.list-unstyled.mb-0.attribute-routes__grid
             each route in promoRoutes
               - const routeUrl = `/bus-ticket/${route.fromSlug}-${route.toSlug}`;
@@ -153,6 +155,34 @@ html
                       span.attribute-route__price-value #{route.formattedPrice}
                       span.attribute-route__price-currency ₺
                       span.attribute-route__price-note 'den başlayan
+      if blogPosts && blogPosts.length
+        section.bus-ticket-blog.mt-5
+          .container
+            .bus-ticket-blog__header
+              .bus-ticket-blog__title
+                h2 En Yeni Blog Yazıları
+                p.bus-ticket-blog__subtitle Seyahat tutkunları için hazırladığımız son içerikleri keşfedin.
+              a.bus-ticket-blog__all(href='/blog') Tüm Yazılar
+            .row.g-4
+              each post in blogPosts
+                .col-12.col-md-6.col-xl-3
+                  article.bus-ticket-blog-card
+                    a.bus-ticket-blog-card__link(href=`/blog/${post.slug}`)
+                      if post.coverImage
+                        figure.bus-ticket-blog-card__media
+                          img(src=`/blog/images/${post.coverImage}` alt=post.title loading='lazy')
+                      else
+                        figure.bus-ticket-blog-card__media.bus-ticket-blog-card__media--placeholder
+                          - const postInitial = (post.title || '').charAt(0) || '?'
+                          span.bus-ticket-blog-card__placeholder-initials #{postInitial}
+                      .bus-ticket-blog-card__body
+                        if post.displayDate
+                          span.bus-ticket-blog-card__date #{post.displayDate}
+                        h3.bus-ticket-blog-card__heading #{post.title}
+                        if post.tags && post.tags.length
+                          ul.bus-ticket-blog-card__tags
+                            each tag in post.tags.slice(0, 3)
+                              li #{tag}
   script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
