--- a/views/find-ticket.pug
+++ b/views/find-ticket.pug
@@ -5,11 +5,11 @@ block css
   link(rel='stylesheet', href='/css/find-ticket.css')
 
 block content
-  .container.py-5.find-ticket-page
+  .text-center.pb-3(style="background-color:#2660ff;")
+    h1.display-6.fw-bold.text-white Biletimi Bul
+    p.lead.text-white Satın aldığınız biletleri PNR veya iletişim bilgilerinizle görüntüleyin.
+  .container.py-4.find-ticket-page
     .row.gy-4
-      .col-12
-        h1.display-6.fw-bold.text-primary Biletimi Bul
-        p.lead.text-primary Satın aldığınız biletleri PNR veya iletişim bilgilerinizle görüntüleyin.
       .col-lg-4
         .card.shadow-sm.find-ticket-card
           .card-header
