--- a/views/layout_invert.pug
+++ b/views/layout_invert.pug
@@ -24,7 +24,7 @@ html
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
           if currentUser
-            a.gtr-link#myTrips(href='#' role='button')
+            a.gtr-link#myTrips(href='/user/my-trips' role='button')
               i.fa-solid.fa-road.me-1
               |Seyahatlerim
             .dropdown
