Move payment page validation script to external file

--- a/views/payment.pug
+++ b/views/payment.pug
@@ -189,3 +189,4 @@ block content
 
 block scripts
     script(type='application/json' id='country-options')!= JSON.stringify(countryOptions || [])
+    script(src='/js/payment.js')
