--- a/views/find-ticket-results.pug
+++ b/views/find-ticket-results.pug
@@ -6,9 +6,17 @@ else
     each ticket in tickets
       article.find-ticket-result-item
         .ticket-header
-          .ticket-passenger
-            .label.text-uppercase Yolcu
-            .value= ticket.passenger.fullName || "-"
+          img.firm-img(src=`/images/${ticket.firmKey}.png` alt="" srcset="")
+          .ticket-body
+            .ticket-body-item
+              .label Yolcu
+              .value= ticket.passenger.fullName || "-"
+            .ticket-body-item
+              .label Telefon
+              .value= ticket.phoneNumber || "-"
+            .ticket-body-item
+              .label E-posta
+              .value= ticket.contactEmail || "-"
           .pnr-badge= ticket.pnr || "PNR YOK"
           .ticket-actions.dropdown
             button.btn.btn-ticket-actions(type='button', id=`ticket-actions-${ticket.id}` data-bs-toggle='dropdown' aria-expanded='false' aria-label='Bilet işlemleri menüsü')
@@ -33,12 +41,6 @@ else
           .ticket-body-item
             .label Koltuk
             .value= ticket.seatNo || "-"
-          .ticket-body-item
-            .label Telefon
-            .value= ticket.phoneNumber || "-"
-          .ticket-body-item
-            .label E-posta
-            .value= ticket.contactEmail || "-"
         .ticket-footer
           if ticket.statusLabel
             span.status-badge(class=ticket.statusClass)= ticket.statusLabel
