--- a/views/find-ticket-results.pug
+++ b/views/find-ticket-results.pug
@@ -5,10 +5,11 @@ else
   .find-ticket-results-list
     each ticket in tickets
       article.find-ticket-result-item
-        .ticket-header
-          .ticket-header-main
+        .ticket-main
+          .ticket-brand
             .firm-logo
               img(src=`/images/${ticket.firmKey}.png` alt="" srcset="")
+          .ticket-content
             .ticket-passenger
               .ticket-passenger-item
                 .label Yolcu
@@ -19,7 +20,23 @@ else
               .ticket-passenger-item
                 .label E-posta
                 .value= ticket.contactEmail || "-"
-          .ticket-header-controls
+            .ticket-body
+              .ticket-body-item
+                .label Kalkış
+                .value= ticket.trip.fromTitle || "-"
+              .ticket-body-item
+                .label Varış
+                .value= ticket.trip.toTitle || "-"
+              .ticket-body-item
+                .label Seyahat Tarihi
+                .value= ticket.trip.tripDate || "-"
+              .ticket-body-item
+                .label Seyahat Saati
+                .value= ticket.trip.tripTime || "-"
+              .ticket-body-item
+                .label Koltuk
+                .value= ticket.seatNo || "-"
+          .ticket-sidebar
             .pnr-badge= ticket.pnr || "PNR YOK"
             .ticket-actions.dropdown
               button.btn.btn-ticket-actions(type='button', id=`ticket-actions-${ticket.id}` data-bs-toggle='dropdown' aria-expanded='false' aria-label='Bilet işlemleri menüsü')
@@ -28,22 +45,6 @@ else
                 button.dropdown-item(type='button') Açığa Al
                 button.dropdown-item(type='button') İade Et
                 button.dropdown-item(type='button') Başka Sefere Taşı
-        .ticket-body
-          .ticket-body-item
-            .label Kalkış
-            .value= ticket.trip.fromTitle || "-"
-          .ticket-body-item
-            .label Varış
-            .value= ticket.trip.toTitle || "-"
-          .ticket-body-item
-            .label Seyahat Tarihi
-            .value= ticket.trip.tripDate || "-"
-          .ticket-body-item
-            .label Seyahat Saati
-            .value= ticket.trip.tripTime || "-"
-          .ticket-body-item
-            .label Koltuk
-            .value= ticket.seatNo || "-"
         .ticket-footer
           if ticket.statusLabel
             span.status-badge(class=ticket.statusClass)= ticket.statusLabel
