--- a/views/find-ticket-results.pug
+++ b/views/find-ticket-results.pug
@@ -31,11 +31,12 @@ else
                 .value= ticket.contactEmail || "-"
           .ticket-header-controls
             .pnr-badge= ticket.pnr || "PNR YOK"
-            .ticket-actions.dropdown
-              button.btn.btn-ticket-actions(type='button', id=`ticket-actions-${ticket.id}` data-bs-toggle='dropdown' aria-expanded='false' aria-label='Bilet işlemleri menüsü')
-                i.fa-solid.fa-ellipsis-vertical
-              .dropdown-menu.dropdown-menu-end(aria-labelledby=`ticket-actions-${ticket.id}`)
-                button.dropdown-item(type='button' data-ticket-cancel-trigger) İptal Et
+            if ticket.status !== "refund" && ticket.status !== "canceled"
+              .ticket-actions.dropdown
+                button.btn.btn-ticket-actions(type='button', id=`ticket-actions-${ticket.id}` data-bs-toggle='dropdown' aria-expanded='false' aria-label='Bilet işlemleri menüsü')
+                  i.fa-solid.fa-ellipsis-vertical
+                .dropdown-menu.dropdown-menu-end(aria-labelledby=`ticket-actions-${ticket.id}`)
+                  button.dropdown-item(type='button' data-ticket-cancel-trigger) İptal Et
         .ticket-body
           .ticket-body-item
             .label Kalkış
@@ -58,10 +59,6 @@ else
           span.meta-item
             i.fa-regular.fa-calendar
             span= ticket.createdAtText || "Oluşturulma tarihi bilinmiyor"
-        .ticket-cancel-actions
-          button.btn.btn-outline-danger.w-100(type='button' data-ticket-cancel-trigger)
-            i.fa-solid.fa-ban.me-2
-            | İptal Et
   #ticketCancelPopup.auth-popup.ticket-cancel-popup(aria-hidden='true')
     .auth-popup__overlay(data-ticket-cancel-close)
     .auth-popup__dialog(role='dialog' aria-modal='true' aria-labelledby='ticketCancelTitle')
