--- a/views/index.pug
+++ b/views/index.pug
@@ -103,7 +103,7 @@ html
         .coming-soon-marquee.ms-3
           .marquee.marquee--rtl
             p.w-100.m-0 Çok Yakında Sizlerle...
-        .d-flex.justify-content-evenly
+        .coming-soon__logos.d-flex.flex-wrap.justify-content-center
           img.coming-soon-firm(src="/images/anafartalarturizm.png" alt="Anafartalar Turizm")
           img.coming-soon-firm(src="/images/baltur.png" alt="Baltur")
           img.coming-soon-firm(src="/images/bantur.png" alt="Bantur")
@@ -113,7 +113,7 @@ html
           .marquee.marquee--ltr
             p.w-100.text-end.m-0 Çok Yakında Sizlerle...
         hr
-      .d-flex.gap-3.mt-4
+      .home-attributes.mt-4
         .attribute.d-flex.flex-column
           img.attributes_icon(src="/svg/customer_service_icon.svg" alt="Çözümcü Online Destek")
           h4 Çözümcü Online Destek
