--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ include components/auth-modals
 html
   head
     title= title
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png")
     link(rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png")
@@ -55,7 +56,7 @@ html
               |Kayıt Ol
       - const fromValue = typeof fromId !== 'undefined' ? fromId : '';
       - const toValue = typeof toId !== 'undefined' ? toId : '';
-      p Türkiye'nin En Yeni Online Yazıhanesi
+      p.slogan Türkiye'nin En Yeni Online Yazıhanesi
       .trip-finder.border
         .trip-finder_selects
           .d-flex.flex-column
